distribute as sections

--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
 </head>
 
 <body>
-    <div class="shadow-lg sticky-top p-3 mb-5 bg-dark rounded" id="title">PenUp Writing Forum - Write-A-Week 3.0
-      <button data-bs-toggle="modal" data-bs-target="#gameModal">Game</button>
-    </div>
+    
+    <section id="heading">
+    <div class="shadow-lg sticky-top p-3 mb-5 bg-dark rounded" id="title">PenUp Writing Forum - Write-A-Week 3.0</div>
+    </section>
+    
+    <section id="subs">
     <div class="" id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero libero, blandit id est ac, pharetra ullamcorper metus. Vestibulum lorem justo, dignissim eu pretium vitae, tincidunt nec sem. In nulla nibh, tincidunt ac massa in, placerat cursus lorem. Sed ipsum odio, posuere eu ipsum vehicula, tempor semper ligula. Nullam cursus pellentesque tellus, ut pulvinar eros viverra ut. Maecenas molestie est elit, eu placerat nibh bibendum at. Curabitur non dui justo. Sed ornare mauris sem, non iaculis massa laoreet id.
     </div>
     <p id="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     <div id="button">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Vote</button>
     </div>
+    </section>
 
     <div class="row mb-2 post">
         <div class="col-md-6">
